--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,13 @@
       <p><%= link_to "로그인", new_user_session_path %></p>
       <p><%= link_to "회원가입", new_user_registration_path %></p>
     <% end %>
+    
+     <form action="/searches/search" method = "post">
+     <input type = "text" name ="search_content">
+     <input type = "submit" value ="검색">
+  </form>
 
+  
     <%= yield %>
   </body>
 </html>
